--- a/package.json
+++ b/package.json
@@ -28,17 +28,28 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@reduxjs/toolkit": "^2.8.2",
+    "@types/jszip": "^3.4.0",
+    "@types/xml2js": "^0.4.14",
+    "adm-zip": "^0.5.16",
     "bcrypt": "^6.0.0",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "exceljs": "^4.4.0",
+    "fast-xml-parser": "^5.2.5",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.539.0",
+    "mammoth": "^1.10.0",
     "next": "15.4.6",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
+    "openai": "^5.13.1",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.16.3",
     "prisma": "^6.13.0",
     "react": "19.1.0",
@@ -50,16 +61,20 @@
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/bcrypt": "^6.0.0",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20",
+    "@types/node": "^20.19.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/xlsx": "^0.0.35",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
