--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jszip": "^3.4.0",
     "@types/xml2js": "^0.4.14",
     "adm-zip": "^0.5.16",
+    "axios": "^1.12.1",
     "bcrypt": "^6.0.0",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
