--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.6",
     "vaul": "^1.1.2",
     "xlsx": "^0.18.5",
     "xml2js": "^0.6.2"
