--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.2",
     "jszip": "^3.10.1",
+    "lodash": "^4.2.0",
     "lucide-react": "^0.539.0",
     "mammoth": "^1.10.0",
     "next": "15.4.6",
