--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lodash": "^4.2.0",
     "lucide-react": "^0.539.0",
     "mammoth": "^1.10.0",
+    "marked": "^16.4.0",
     "next": "15.4.6",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
