--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/jszip": "^3.4.0",
+    "@types/nodemailer": "^7.0.4",
     "@types/xml2js": "^0.4.14",
     "adm-zip": "^0.5.16",
     "axios": "^1.12.1",
@@ -43,6 +44,7 @@
     "fast-xml-parser": "^5.2.5",
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.12",
+    "googleapis": "^166.0.0",
     "http-proxy-agent": "^7.0.2",
     "https-proxy-agent": "^7.0.6",
     "jsonwebtoken": "^9.0.2",
@@ -56,6 +58,7 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^6.10.1",
     "openai": "^5.13.1",
     "pdf-parse": "^1.1.1",
     "pg": "^8.16.3",
