--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/nodemailer": "^7.0.4",
     "@types/xml2js": "^0.4.14",
     "adm-zip": "^0.5.16",
+    "argon2": "^0.44.0",
     "axios": "^1.12.1",
     "bcrypt": "^6.0.0",
     "chart.js": "^4.5.0",
